--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ async-timeout==4.0.2
 attrs==23.1.0
 autopep8==2.0.2
 backoff==2.2.1
+boto3==1.26.118
+botocore==1.29.118
 certifi==2022.12.7
 charset-normalizer==3.1.0
 chromadb==0.3.21
 click==8.1.3
 clickhouse-connect==0.5.20
+colorama==0.4.6
 dataclasses-json==0.5.7
 duckdb==0.7.1
 fastapi==0.95.1
@@ -24,6 +27,7 @@ httpx==0.23.3
 huggingface-hub==0.13.4
 idna==3.4
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.2.0
 langchain==0.0.144
 lz4==4.3.2
@@ -44,6 +48,7 @@ packaging==23.1
 pandas==2.0.0
 Pillow==9.5.0
 posthog==3.0.1
+pretty-errors==1.2.25
 pycodestyle==2.10.0
 pydantic==1.10.7
 python-dateutil==2.8.2
@@ -54,6 +59,7 @@ PyYAML==6.0
 regex==2023.3.23
 requests==2.28.2
 rfc3986==1.5.0
+s3transfer==0.6.0
 scikit-learn==1.2.2
 scipy==1.10.1
 sentence-transformers==2.2.2
