--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       AWS_ACCESS_ID: "${AWS_ACCESS_ID}"
       OPEN_AI_SECRET_KEY: "${OPEN_AI_SECRET_KEY}"
       TELEGRAM_BOT_TOKEN: "${TELEGRAM_BOT_TOKEN}"
+      DB_NAME: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD:  "postgres"
+    links:
+      - db
   db:
     image: postgres:14.1-alpine
     restart: always
@@ -19,6 +24,7 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
 volumes:
   db:
