--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
+---
+version: "3.9"
 services:
   telegram-bot:
-    env_file: .env
-    build: 
+    env_file: ./.env
+    build:
       context: ./
       dockerfile: Dockerfile
     environment:
-      AWS_SECRET_KEY: "${AWS_SECRET_KEY}"
-      AWS_ACCESS_ID: "${AWS_ACCESS_ID}"
-      OPEN_AI_SECRET_KEY: "${OPEN_AI_SECRET_KEY}"
-      AWS_REGION: "${AWS_REGION}"
-      TELEGRAM_BOT_TOKEN: "${TELEGRAM_BOT_TOKEN}"
+      AWS_SECRET_KEY: ${AWS_SECRET_KEY}
+      AWS_ACCESS_ID: ${AWS_ACCESS_ID}
+      OPEN_AI_SECRET_KEY: ${OPEN_AI_SECRET_KEY}
+      AWS_REGION: ${AWS_REGION}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
