--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@
 version: "3.9"
 services:
   telegram-bot:
-    env_file: ./.env
+    env_file: 
+     - .env
     build:
       context: ./
       dockerfile: Dockerfile
